assets/css/main.css
/* ... */
#about-page .river-wave {
	background: url(../img/main/new/river_wave.svg) no-repeat center center;
	background-size: 100% 100%;
	z-index: 2;
	width: 100%;
	height: 100%;
}

#about-page .desciption {
	max-width:500px;
}

#about-page .row {
	color: #EDEB98;
}

#about-page .looknum {
	display:inline-block;
	max-width: 150px;
	width: 20%;
	padding: 0px 30px;
	margin-bottom: 35px;
}

#about-page .plata-1 {
	position: absolute;
	margin-top: -500px;
	margin-left: -145px;
	height: 300px;
}

#about-page .plata-2 {
	background: url(../img/main/plata_2.png);
	background-size: 250px auto;
	background-repeat: no-repeat;
	background-position: 700px top;
	position: absolute;
	margin-top: -130px;
	width: 100%;
	height: 200px;
}

#about-page .boat {
	background: url(../img/main/new/boat.svg);
	background-size: 32% auto;
	background-position: 0 20%;
	background-repeat: no-repeat;
	position: absolute;
	height: 210px;
	width: 100%;
	z-index: 3;
}

@media screen and ( max-width: 1199px ) {
	#about-page .plata-2 {
		background-size: 200px auto;
		background-position: 550px top;
	}
}

@media screen and (max-width:991px) {
	#about-page .looknum {
		padding: 0 15px;
		margin-bottom: 30px;
	}
	#about-page .plata-1 {
		margin-top: -505px;
		margin-left: -270px;
	}
	#about-page .plata-2 {
		background-size: 200px auto;
		background-position: 450px top;
	}
	#about-page .boat {
		height: 100px;
	}
}
@media screen and (max-width:768px) {
	#about-page .looknum {
		padding: 0 10px;
		width: 15%;
		max-width: 75px;
		margin-bottom: 15px;
	}
	#about-page .plata-2 {
		margin-top: -100px;
		background-size: 150px auto;
		background-position: 90% top;
	}
	#about-page .boat {
		height: 60px;
	}
}
@media screen and (max-width:480px) {
	#about-page .looknum {
		display: none;
	}
}

#about-page .big-text {
	display:inline-block;
	color: #fff;
}

#category-page {
	padding-top: 0px;
	color: #000;
}

#category-page .description {
	min-height: 180px;
	font-size: 20px;
	font-family: 'CSPraJad';
	max-width: 450px;
	margin: auto;
	text-align: center;
	margin-top: 5px;
}
@media screen and (max-width:768px) {
	#category-page .description {
		max-width: 250px;
	}
}

#category-page .count-box {
	padding: 5px 0px;
	margin: auto;
	font-size: 22px;
	border-radius: 5px;
	color: #fff;
	width: 120px;
	text-align: center;
}

#category-page .cat-text {
	font-size: 30px;
	margin-top:20px;
}
@media screen and (max-width:480px) {
	#category-page .cat-text {
		font-size: 26px;
	}
}

#category-page .register {
	cursor:pointer;
	margin-top: 20px;
	margin-bottom: 50px;
	width: 170px;
}

#category-page .head {
	max-width : 240px;
}

@media screen and (max-width:768px) {
	#category-page .register {
		margin-top: 15px;
	}
	#category-page .head {
		max-width: 200px;
	}
}

#sponsor-page {
	padding-top: 0px;
}

#sponsor-page .col-xs-6 {
	padding: 0 60px;
}

#sponsor-page .big-text {
	text-shadow: 2px 2px 0px rgba(0,0,0,0.3);
}

@media screen and (max-width: 991px) {
	#sponsor-page .col-xs-6 {
		padding: 0 30px;
	}
}

@media screen and (max-width: 768px) {
	#sponsor-page .col-xs-6 {
		padding: 0 10px;
	}
}

@media screen and (max-width: 480px) {
	#sponsor-page .col-xs-6 {
		padding: 0px;
	}
}


#timeline-page {
	background-image: url(../img/main/timeline_bottom.png);
	background-size: 100% auto;
	background-position:top center;
}

#timeline-page .timeline {
	/*background: url(../img/main/new/timeline.svg) no-repeat center center;*/
  background-size: 240px;
  height: 380px;
  width: 660px;
  position: relative;
  font-size: 1.6em;
  margin: 5% auto;
}

#timeline-page .timeline-bg {
	background: url(../img/main/new/timeline.svg) no-repeat center center;
  background-size: 240px;
  height: 100%;
  width: 100%;
  position: absolute;
  z-index: 2;
  -moz-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  -o-transform: rotate(135deg);
  -webkit-transform: rotate(135deg);
  -moz-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  -o-transform-origin: 50% 50%;
  -webkit-transform-origin: 50% 50%;
}

#timeline-page .timeline-item {
	position: absolute;
}

#timeline-page .timeline-item:nth-child(1) {
	right: 0;
	top: 0;
}

#timeline-page .timeline-item:nth-child(2) {
	right: 0;
	bottom: 0;
}

#timeline-page .timeline-item:nth-child(3) {
	left: 0;
	bottom: 0;
}

#timeline-page .timeline-item:nth-child(4) {
	left: 0;
	top: 0;
}

#timeline-page .timeline-fish {
	display: none;
	position: absolute;
}

@media screen and (max-width: 768px) {
	#timeline-page {
		background-size: cover;
	}
	#timeline-page .timeline-bg {
		display: none;
	}
	#timeline-page .timeline {
		background: none;
  	height: initial;
  	width: initial;
  	margin: 8% auto 5% 40%;
  	border-left: 4px solid #fff;
	}

	#timeline-page .timeline-item {
		position: relative;
	  margin: 0 0 50px 60px;
	}

	#timeline-page .timeline-fish {
		display: block;
  	top: -22px;
  	right: 98%;
  	width: 160px;
	}

}

@media screen and (max-width:480px) {
	#timeline-page .timeline-item {
		margin: 0 0 30px 20px;
		font-size: 18px;
	}
	#timeline-page .timeline-fish {
	  top: -20px;
	  width: 130px;
	}
}

#picture-page {
	background: url("../img/main/activity.png");
	background-size: cover;
	background-position: center center;
	color: #000;
}

#picture-page .table-picture img {
	margin-bottom: 10px;
}

#picture-page .table-picture .row img {
	box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.1);
}

#picture-page .col-md-4,#picture-page .col-md-3,#picture-page .col-md-6 {
	padding-left: 5px;
	padding-right: 5px;
}

#picture-page .social {
	margin-top:60px;
}

#picture-page .social p {
	font-size: 2em;
}

#picture-page .social a img {
	width: 70px;
	margin-left:30px;
}

#category-page .big-text, #sponsor-page .big-text {
	padding-top:30px;
}
@media screen and (max-width:768px) {
	#category-page .big-text, #sponsor-page .big-text {
		padding-top:50px;
	}
}

#qa-page {
	padding-top: 10px;
	padding-bottom: 0px;
}

#qa-page .big-text {
	font-size: 40px;
}
/* ... */

